tests/libdef_parse_error_lazy_mode/libdef_parse_error_lazy_mode.exp
Error ------------------------------------------------------------------------------------------------------- lib.js:1:7

Unexpected token `;`, expected an identifier [ParseError]

   1| const ;
            ^



Found 1 error

The Flow server is currently in lazy mode and is only checking 0/1 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
